--- a/MoviesService/src/main/resources/application.properties
+++ b/MoviesService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=25_01_sparks
-
+spring.application.name=MoviesService
+server.port=8080
 
 spring.jpa.show-sql=true
 spring.datasource.driverClassName=org.h2.Driver
@@ -14,4 +14,11 @@ spring.datasource.url=jdbc:h2:file:./testdb;AUTO_SERVER=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#Permet de désactiver les logs d'échec de recherche d'EurekaServeur quand celui-ci n'est pas lancé
+logging.level.com.netflix.discovery=OFF
+
+#Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
